# mojo-extension

./: README.rst  pyproject.toml
.github/: README.md
.github/workflows/: codeql.yml  merge_gate.yml
development/: setup-environment
repository-setup/: rehome-repository  repository-config.ini
source/tests/: myextinst.py  myexttype.py  test_configfile_extensions.py  test_configured_extensions.py  test_variable_extensions.py
