[tool.poetry]
name = "mojo-extension"
description = "Automation Mojo Extension Package"
version = "1.3.19"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-extension"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mojo-startup = ">=1.3.11 <1.4.0"
mojo-collections = ">=1.3.16 <1.4.0"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
